Run load tests with Apache JMeter

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -121,6 +121,7 @@ stages:
     environment: staging
     variables:
     - group: 'Release'
+      jmeterVersion: '5.4.1'
     strategy:
       runOnce:
         deploy:
